tests/baselines/reference/parserTypeQuery1.errors.txt
==== tests/cases/compiler/parserTypeQuery1.ts (1 errors) ====
    var v: typeof A
                  ~
!!! parserTypeQuery1.ts(1,15): error TS2095: Cannot find name 'A'.